# rust-microservice-grpc

./: Cargo.toml  MakeFile.toml  docker-compose.yml  run.sh
crates/api_gateway/: Cargo.toml  Dockerfile
crates/api_gateway/src/: main.rs
crates/auth_service/: Cargo.toml  Dockerfile
crates/auth_service/src/: main.rs
crates/dev_core/: Cargo.toml
crates/dev_core/src/: error_proto.rs  errors.rs  lib.rs
crates/dev_infra/: Cargo.toml
crates/dev_proto/: Cargo.toml  build.rs
crates/dev_proto/proto/: api_gateway.proto  auth.proto  error.proto
crates/dev_proto/src/: lib.rs
crates/dev_utils/: Cargo.toml
crates/project_service/: Cargo.toml  Dockerfile
crates/project_service/src/: main.rs
