[workspace]
members = [ 
    "crates/api_gateway", 
    "crates/auth_service",
    "crates/dev_core",
    "crates/dev_infra", 
    "crates/dev_proto",
    "crates/dev_utils",
    "crates/project_service"]
resolver = "2"


[workspace.dependencies]
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = { version = "0.1", features = ["env_logger"] }
tracing-subscriber = "0.3.19"

serde_qs = "0.15.0"
serde_json ="1.0.138"
serde = { version = "1.0", features = ["derive"] }

validator = { version = "0.20.0", features = ["derive"] }
validator_derive = "0.20.0"
uuid = { version = "1.16.0", features = ["serde","v4"] }
chrono = { version = "0.4.40", features = ["serde"] }
derive_more = "2.0.1"

tokio-util = { version = "0.7", features = ["codec"] }
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.13.1", features = ["transport"] }
prost = "0.13.5"
prost-types = "0.13.5"

rustls = "0.23.27"
webpki-roots = "1.0.0"
openssl-sys = "0.9.108"

glob = "0.3"
tonic-build = "0.13.1"
